# fastapi-openapi-cli

./: CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  publish.yml
src/fastapi_openapi_cli/: __init__.py  cli.py  export.py  loader.py
tests/: test_cli.py  test_export.py  test_loader.py
tests/fixtures/: no_app.py  sample_app.py  wrong_type.py
